# dc2-rs

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md  README.md
gui/: .env.template  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml
gui/src/: App.css  App.jsx  footer.jsx  navbar.jsx
gui/src-tauri/: .env.template  Cargo.toml  tauri.conf.json
gui/src-tauri/database/: peers.db
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: Home.jsx
gui/src/store/: envVars.js  useAppStore.js
gui/src/t-api/: api.js
hostfile/: sample.txt
src/: client.rs  discovery.rs  files.rs  gui.rs  main.rs  peer.rs  protocol.rs  server.rs
