[package]
name = "dc2-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
eframe = "0.27"
